--- a/index.html
+++ b/index.html
@@ -7,10 +7,24 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <!--start header-->
+    <header>
+        <ul>
+            <li><a href="#home">HOME</a></li>
+            <li><a href="#home">BEDROOM</a></li>
+            <li><a href="#home">DINNIG</a></li>
+            <li><a href="#home">KITCHEN</a></li>
+            <li><a href="#home">BACKYARD</a></li>
+        </ul>
+    </header>
+    <!--end header-->
     <h1><b>DESIGN YOUR HOUSE</b></h1>
     <p>Subcribe Easy Tutorials YouTube Channel to watch more videos,<br>
     press the bell icon to get latest updates.</p>
-    <button>WATCH MORE</button>
-    <button>SUBCRIBE</button>
+    
+    <div>
+        <button>WATCH MORE</button>
+        <BUtton>SUBSCRIBE</BUtton>
+    </div>
 </body>
 </html>
