add file of bootstrap

--- a/index.html
+++ b/index.html
@@ -3,28 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Class task1</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Saylani Welfare site</title>
 </head>
 <body>
-    <!--start header-->
-    <header>
-        <ul>
-            <li><a href="#home">HOME</a></li>
-            <li><a href="#home">BEDROOM</a></li>
-            <li><a href="#home">DINNIG</a></li>
-            <li><a href="#home">KITCHEN</a></li>
-            <li><a href="#home">BACKYARD</a></li>
-        </ul>
-    </header>
-    <!--end header-->
-    <h1><b>DESIGN YOUR HOUSE</b></h1>
-    <p>Subcribe Easy Tutorials YouTube Channel to watch more videos,<br>
-    press the bell icon to get latest updates.</p>
-    
-    <div>
-        <button>WATCH MORE</button>
-        <BUtton>SUBSCRIBE</BUtton>
-    </div>
+    <h1>Saylani Welfare site task</h1>
 </body>
 </html>
