--- a/index.html
+++ b/index.html
@@ -1,11 +1,90 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Saylani Welfare site</title>
+  <title>Bootstrap Example</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
-    <h1>Saylani Welfare site task</h1>
+
+<nav class="navbar navbar-expand-sm bg-light navbar-light">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#"> <img src="./image/saylani logo.png" width="200" alt="Logo"></a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse justify-content-end" id="collapsibleNavbar">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" href="#">Home</a>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">About</a>
+          <ul class="dropdown-menu">
+            <li><a class="dropdown-item" href="#">Introduction</a></li>
+            <li><a class="dropdown-item" href="#">Chairman Message</a></li>
+            <li><a class="dropdown-item" href="#">Audit Reports</a></li>
+            <li><a class="dropdown-item" href="#">Tax Exemption Certificate</a></li>
+          </ul>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">Services</a>
+          <ul class="dropdown-menu">
+            <li><a class="dropdown-item" href="#">Health</a></li>
+            <li><a class="dropdown-item" href="#">Education</a></li>
+            <li><a class="dropdown-item" href="#">Food</a></li>
+            <li><a class="dropdown-item" href="#">Sadiqah Jariah</a></li>
+          </ul>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">Media</a>
+          <ul class="dropdown-menu">
+            <li><a class="dropdown-item" href="#">Videoes</a></li>
+            <li><a class="dropdown-item" href="#">Books</a></li>
+            <li><a class="dropdown-item" href="#">News</a></li>
+            
+          </ul>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">Contact US</a>
+          <ul class="dropdown-menu">
+            <li><a class="dropdown-item" href="#">Contact us</a></li>
+            <li><a class="dropdown-item" href="#">Branches</a></li>
+            
+          </ul>
+        </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Bank Details</a>
+          </li> 
+        </li>  
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">Other Websites</a>
+          <ul class="dropdown-menu">
+            <li><a class="dropdown-item" href="#">Saylani UK</a></li>
+            <li><a class="dropdown-item" href="#">Saylani USA</a></li>
+            <li><a class="dropdown-item" href="#">Saylani Canada</a></li>
+            <li><a class="dropdown-item" href="#">Saylani Turkiye</a></li>
+          </ul>
+        </li>
+        <button type="button" class="btn btn-primary" class="me-0 bg-warning">DONATE NOW</button>
+        <button type="button" class="btn btn-success mr-3">AS A SPONSER</button>
+      </ul>
+    </div>
+  </div>
+</nav>
+
+<div class="container-fluid mt-3">
+  <h3>Welcome to the <br>Saylani Welfare</h3>
+  <p>Saylani Welfare is on the ground and already working with local <br> 
+    communities to assess how best to support underprivileged families in more <br>
+    than 63 areas of day to day lives.
+
+
+    <img src="./image/salani pic2.png" class="img-fluid float-end" height="200" alt="...">
+  </p>
+</div>
+
 </body>
 </html>
